# backend/modules/orkestra-app/src/main/java/com/orkestra/app/web/WorkflowController.java
@@ -4,6 +4,7 @@ import com.orkestra.api.model.ListWorkflowVersionsResponse;
 import com.orkestra.api.model.ListWorkflowsResponse;
 import com.orkestra.api.model.RegisterWorkflowResponse;
 import com.orkestra.api.model.WorkflowVersion;
+import com.orkestra.app.security.CurrentUserProvider;
 import com.orkestra.app.service.WorkflowManagementService;
 import com.orkestra.app.web.generated.WorkflowApi;
 import com.orkestra.app.web.util.WorkflowFileReader;
@@ -25,30 +26,28 @@ public class WorkflowController implements WorkflowApi {
     private static final Logger log = LoggerFactory.getLogger(WorkflowController.class);
 
     private final WorkflowFileReader workflowFileReader;
-
     private final WorkflowManagementService workflowManagementService;
 
     @Override
-    public ResponseEntity<WorkflowVersion> getWorkflowVersion(String name, Integer version) {
+    public ResponseEntity<WorkflowVersion> getWorkflowVersion(String xTenantId, String name, Integer version) {
         log.info("Received request to get workflow version name={} version={}", name, version);
-        return ResponseEntity.ok(workflowManagementService.getWorkflowVersion("1", name, version));
+        return ResponseEntity.ok(workflowManagementService.getWorkflowVersion(xTenantId, name, version));
     }
 
     @Override
-    public ResponseEntity<ListWorkflowVersionsResponse> listWorkflowVersions(String name) {
+    public ResponseEntity<ListWorkflowVersionsResponse> listWorkflowVersions(String xTenantId, String name) {
         log.info("Received request to list workflow versions name={}", name);
-
-        return ResponseEntity.ok(workflowManagementService.listWorkflowVersions("1", name));
+        return ResponseEntity.ok(workflowManagementService.listWorkflowVersions(xTenantId, name));
     }
 
     @Override
-    public ResponseEntity<ListWorkflowsResponse> listWorkflows(String cursor, Integer limit) {
+    public ResponseEntity<ListWorkflowsResponse> listWorkflows(String xTenantId, String cursor, Integer limit) {
         log.info("Received request to list workflows cursor={} limit={}", cursor, limit);
-        return ResponseEntity.ok(workflowManagementService.listWorkflows("1", cursor, limit));
+        return ResponseEntity.ok(workflowManagementService.listWorkflows(xTenantId, cursor, limit));
     }
 
     @Override
-    public ResponseEntity<RegisterWorkflowResponse> registerWorkflow(String name, MultipartFile definition) {
+    public ResponseEntity<RegisterWorkflowResponse> registerWorkflow(String xTenantId, String name, MultipartFile definition) {
         log.info("Received workflow file name={} size={}B", name, definition.getSize());
 
         if (definition.isEmpty()) {
@@ -65,7 +64,7 @@ public class WorkflowController implements WorkflowApi {
 
         String yamlString = workflowFileReader.read(definition);
 
-        RegisterWorkflowResponse response = workflowManagementService.register("1", name, yamlString);
+        RegisterWorkflowResponse response = workflowManagementService.register(xTenantId, name, yamlString);
 
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
