# backend/modules/orkestra-storage/src/main/java/com/orkestra/storage/dynamodb/model/PlatformAdminTable.java
@@ -1,0 +1,67 @@
+package com.orkestra.storage.dynamodb.model;
+
+import lombok.EqualsAndHashCode;
+import lombok.ToString;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbAttribute;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey;
+
+import java.time.OffsetDateTime;
+
+@EqualsAndHashCode
+@ToString
+@DynamoDbBean
+public class PlatformAdminTable {
+
+    private String userId;
+
+    private String email;
+
+    private OffsetDateTime createdAt;
+
+    private String createdBy;
+
+    private String status;
+
+    @DynamoDbPartitionKey
+    @DynamoDbAttribute("userId")
+    public String getUserId() {
+        return userId;
+    }
+
+    public void setUserId(String userId) {
+        this.userId = userId;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public OffsetDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(OffsetDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public String getCreatedBy() {
+        return createdBy;
+    }
+
+    public void setCreatedBy(String createdBy) {
+        this.createdBy = createdBy;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
+}
