# backend/modules/orkestra-storage/src/main/java/com/orkestra/storage/dynamodb/model/TenantTable.java
@@ -1,0 +1,70 @@
+package com.orkestra.storage.dynamodb.model;
+
+import lombok.EqualsAndHashCode;
+import lombok.ToString;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbAttribute;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbSecondaryPartitionKey;
+
+import java.time.OffsetDateTime;
+
+@EqualsAndHashCode
+@ToString
+@DynamoDbBean
+public class TenantTable {
+
+    private String tenantId;
+
+    private String slug;
+
+    private String name;
+
+    private OffsetDateTime createdAt;
+
+    private String createdBy;
+
+    @DynamoDbPartitionKey
+    @DynamoDbAttribute("tenantId")
+    public String getTenantId() {
+        return tenantId;
+    }
+
+    public void setTenantId(String tenantId) {
+        this.tenantId = tenantId;
+    }
+
+    @DynamoDbSecondaryPartitionKey(indexNames = "slug-index")
+    @DynamoDbAttribute("slug")
+    public String getSlug() {
+        return slug;
+    }
+
+    public void setSlug(String slug) {
+        this.slug = slug;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public OffsetDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(OffsetDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public String getCreatedBy() {
+        return createdBy;
+    }
+
+    public void setCreatedBy(String createdBy) {
+        this.createdBy = createdBy;
+    }
+}
