# backend/modules/orkestra-storage/src/main/java/com/orkestra/storage/dynamodb/model/UserTable.java
@@ -1,0 +1,78 @@
+package com.orkestra.storage.dynamodb.model;
+
+import lombok.EqualsAndHashCode;
+import lombok.ToString;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbAttribute;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey;
+
+import java.time.OffsetDateTime;
+
+@EqualsAndHashCode
+@ToString
+@DynamoDbBean
+public class UserTable {
+
+    private String userId;
+
+    private String email;
+
+    private String displayName;
+
+    private OffsetDateTime createdAt;
+
+    private OffsetDateTime lastLoginAt;
+
+    private String status;
+
+
+    @DynamoDbPartitionKey
+    @DynamoDbAttribute("userId")
+    public String getUserId() {
+        return userId;
+    }
+
+    public void setUserId(String userId) {
+        this.userId = userId;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getDisplayName() {
+        return displayName;
+    }
+
+    public void setDisplayName(String displayName) {
+        this.displayName = displayName;
+    }
+
+    public OffsetDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(OffsetDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public OffsetDateTime getLastLoginAt() {
+        return lastLoginAt;
+    }
+
+    public void setLastLoginAt(OffsetDateTime lastLoginAt) {
+        this.lastLoginAt = lastLoginAt;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
+}
